--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -24,7 +24,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 # {{pejorative}} A [[fool]], [[idiot]]
 # {{slang|usually in plural}} A [[testicle]].
 # The edible, fleshy stone of ''Prunus mume'', an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
-# The tree which bears this fruit, ''Prunus mume''.  See ''[[plum blossom]]''.
+# The tree which bears this fruit, ''Prunus mume''. See ''[[plum blossom]]''.
 
 ====Synonyms====
 * {{sense|tree}} [[plum tree]]
@@ -137,7 +137,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 {{trans-top|the fruit}}
 * [[Afrikaans]]: [[pruim]]
 * Arabic: {{Arab|[[إجاص|إجّاص]]}} {{IPAchar|(’ijjāṣ)}} {{m}}
-* Armenian: {{t-|hy|սալոր|tr=salor}},  {{qualifier|dialectal}} {{t-|hy|շլոր|tr=šłor}}
+* Armenian: {{t-|hy|սալոր|tr=salor}}, {{qualifier|dialectal}} {{t-|hy|շլոր|tr=šłor}}
 * [[Basque]]: [[aran]]
 * Bosnian: {{t-|bs|šljiva|f}}
 * Bulgarian: {{t+|bg|слива|tr=sliva}}
@@ -159,7 +159,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Hindi: [[आलूचा]] (ālūćā), [[आलूबुखारा]] (ālūbukhārā)
 * Hungarian: {{t+|hu|szilva}}
 * Icelandic: [[plóma]] {{f}}
-* [[Ido]]: {{t+|io|plumo|xs=Ido}},  {{t|io|plumiero|xs=Ido}}
+* [[Ido]]: {{t+|io|plumo|xs=Ido}}, {{t|io|plumiero|xs=Ido}}
 * Irish: {{t-|ga|pluma|m|xs=Irish}}
 * Italian: {{t+|it|prugna|f}}, {{t+|it|susina|f}}
 * Japanese: {{t-|ja|セイヨウスモモ|tr=seiyōsumomo}}, {{t-|ja|プラム|tr=puramu}}
@@ -169,9 +169,9 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Latvian: [[plūme]] {{f}}
 * Lithuanian: {{t+|lt|slyva|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|слива|f|tr=slíva}}
-* [[Middle High German]]: [[pflūme]], [[pfrūme]]
+* [[Middle High German]]: [[pflume|pflūme]], [[pfrume|pfrūme]]
 * [[Old English]]: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
-* [[Old High German]]: [[pfrūma]]
+* [[Old High German]]: {{t|goh|pfruma|alt=pfrūma}}
 * [[Papiamentu]]: {{tø|pap|preimu}}
 * Persian: {{t|fa||tr=ālū|xs=Persian}}
 * Polish: {{t+|pl|śliwka|f}}
