--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -93,6 +93,7 @@
 [[io:Czech Republic]]
 [[id:Czech Republic]]
 [[ku:Czech Republic]]
+[[lv:Czech Republic]]
 [[lt:Czech Republic]]
 [[hu:Czech Republic]]
 [[nl:Czech Republic]]
