--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -49,6 +49,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Italian: {{t+|it|ramo}}
 * Kurdish: {{ku-Arab|[[چرۆ]]}}, {{ku-Arab|[[لق]]}}
 * Latin: {{t-|la|ramus|alt=rāmus}}
+* Latvian: {{t|lv|zars|m}}
 * Lithuanian: {{t+|lt|šaka|f|xs=Lithuanian}}
 {{trans-mid}}
 * [[Macedonian]]: {{t|mk|гранка|n|tr=grànka}}
