--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -45,6 +45,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Kurdish: {{ku-Arab|[[په‌رده‌]]}}
 {{trans-mid}}
 * Latvian: {{t|lv|aizkars|m}}
+* Lithuanian: {{t|lt|užuolaida|f}}
 * [[Macedonian]]: {{t-|mk|завеса|f|tr=závesa}},  {{t|mk|перде|n|tr=pérde}}
 * Persian: {{t+|fa|پرده|tr=pardeh|xs=Persian}}
 * Polish: {{t|pl|zasłona|f}}
