--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -74,7 +74,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Hebrew: {{t|he|עקימה|f|tr='aqima}}
 * Italian: {{t+|it|curva|f}}
 * Japanese: {{t-|ja|曲線|tr=きょくせん, kyokusen}}
-* Lithuanian: {{t|lt|linkis|m}}
+* Lithuanian: {{t|lt|linkis|m}}, {{t|lt|vingis|m}}
 * Polish: {{t|pl|zakręt|m}}
 * Russian: {{t+|ru|изгиб|m|tr=izgíb}}, {{t+|ru|кривая|f|tr=krivája}}, {{t+|ru|поворот|m|tr=povorót}}
 * [[Scottish Gaelic]]: {{t-|gd|bogha|xs=Scottish Gaelic}},  {{t-|gd|lùb|f|xs=Scottish Gaelic}}
