--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -77,7 +77,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Latvian: {{t|lv| līkums|m}}
 * Lithuanian: {{t|lt|linkis|m}}, {{t|lt|vingis|m}}
 * Polish: {{t|pl|zakręt|m}}
-* Romanian: {{t|ro|curbă|f}}
+* Romanian: {{t|ro|curbă|f}}, {{t|ro|curbe|f|p}}
 * Russian: {{t+|ru|изгиб|m|tr=izgíb}}, {{t+|ru|кривая|f|tr=krivája}}, {{t+|ru|поворот|m|tr=povorót}}
 * [[Scottish Gaelic]]: {{t-|gd|bogha|xs=Scottish Gaelic}},  {{t-|gd|lùb|f|xs=Scottish Gaelic}}
 * Spanish: {{t+|es|curva|f}}
