--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -264,7 +264,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 ===Noun===
 '''curve''' {{f|p}}
 
-# {{plural of|curvă|lang=ro}} [[whores]]
+# {{plural of|curvă|lang=ro}}
 
 ----
 
