--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -76,7 +76,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|Germanic|fehtanan|lang=en}}. Cog
 * [[Lao]]: {{t-|lo|ຕໍ່ສູ້|tr=töö-suu|sc=Laoo|xs=Lao}}, {{t-|lo|ຮົບ|tr=hop|sc=Laoo|xs=Lao}}
 * Latin: {{t-|la|pugno}}, {{t-|la|luctor}}
 * {{trreq|Latvian}}
-* Lithuanian: {{t|lt|kautis|xs=Lithuanian}}
+* Lithuanian: {{t|lt|kautis|xs=Lithuanian}}, {{t|lt|muštis}}, {{t|lt|peštis}}, {{t|lt|grumtis}}
 * {{trreq|Maltese}}
 * Norwegian: {{t+|no|slåss}}, {{t-|no|kjempe}}
 * [[Old English]]: {{t-|ang|feohtan|xs=Old English}}
