--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -152,6 +152,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|Germanic|fehtanan|lang=en}}. Cog
 * [[Khmer]]: {{Khmr|[[ប្រយុទ្ឋ]]}} (bprəyŭt)
 * Korean: [[싸우다]] (ssauda)
 * Latin: {{t-|la|combattuo}}
+* Lithuanian: {{t|lt|kovoti}}, {{t|lt|kautis}}
 * Norwegian: {{t+|no|slåss}}
 * [[Occitan]]: {{t+|oc|batre|xs=Occitan}}
 * [[Old French]]: {{tø|fro|batre}},  {{tø|fro|cumbatre}}
