--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -310,6 +310,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * Japanese: [[喧嘩]] (けんか, kenka)
 {{trans-mid}}
 * Latin: {{t+|la|pugna}}
+* Lithuanian: {{t|lt|muštynės|p}}, {{t|lt|peštynės|p}}, {{t|lt|grumtynės|p}}
 * Norwegian: {{t|no|slåsskamp}}
 * Polish: {{t|pl|starcie|n}}
 * Portuguese: {{t+|pt|briga|f}}
