--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -264,6 +264,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * Kurdish:
 *: Sorani: {{t|ku|شه‌ڕ|tr=shaR|sc=ku-Arab}}
 * Latin: {{t+|la|pugna}}
+* Latvian: {{t|lv|cīņa}}, {{t|lv|kauja|f}}
 * Lithuanian: {{t|lt|kova|f}}, {{t|lt|muštynės|p}}, {{t|lt|grumtynės|p}}
 * Norwegian: {{t|no|slåsskamp}}
 * Portuguese: {{t+|pt|luta|f}}
