--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -35,7 +35,7 @@
 * [[Basque]]: [[aukeratu]]
 * Bosnian: {{t-|bs|izabrati}}, {{t-|bs|odabrati}}
 * Bulgarian: {{t+|bg|избирам}}
-* [[Catalan]]: [[escollir]], [[elegir]], [[triar]]
+* [[Catalan]]: {{t|ca|escollir}}, {{t|ca|triar}}, {{t|ca|elegir}}
 * Chinese:
 *: Mandarin: {{t-|cmn|選舉|sc=Hani}},  {{t-|cmn|选举|tr=xuǎnjǔ|sc=Hani}}
 * Croatian: {{t-|hr|izabrati}}, {{t-|hr|odabrati}}
@@ -87,7 +87,7 @@
 * Armenian: [[ընտրել]] (əntrel)
 * Bosnian: {{t-|bs|izabrati}}, {{t-|bs|odabrati}}
 * Bulgarian: {{t|bg|подбирам}},  {{t|bg|предпочитам}}
-* [[Catalan]]: [[elegir]], {{t|ca|triar}}
+* [[Catalan]]: {{t|ca|triar}}, {{t|ca|escollir}}, {{t|ca|elegir}}
 * Chinese:
 *: Gan: {{tø|gan|簡|sc=Hani}}, {{tø|gan|简|tr=gan3|sc=Hani}}
 *: Mandarin: {{t-|cmn|選擇|sc=Hani}},  {{t-|cmn|选择|tr=xuǎnzé|sc=Hani}},  {{t|cmn|挑選|sc=Hani}},  {{t|cmn|挑选|tr=tiāoxuǎn|sc=Hani}}
