--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -24,7 +24,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 ====Synonyms====
 * {{sense|State of Israel}} the Jewish State, the State of Israel
 * {{sense|Land of Israel}} [[Canaan]], the [[Holy Land]], the Land of Israel, the [[Levant]], [[Palestine]]
-* {{Sense|ancient kingdom}} [[Ephraim]]
+* {{sense|ancient kingdom}} [[Ephraim]]
 * {{sense|the Jews}} the Children of Israel
 
 ====Usage notes====
