--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -3,6 +3,9 @@
 {{stroke order|strokes=13}}
 {{stroke order|type=animate}}
 
+===Etymology===
+{{Han compound|相|心|t2=heart, mind|ls=psc|c1=p|c2=s}} – to think, to consider.
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=4633<sub>0</sub>|canj=木山心 (DUP)|ids=⿱[[相]][[心]]}}
 
