--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -46,6 +46,7 @@
 {{trans-bottom}}
 
 {{trans-top|hat made of felt}}
+* Bosnian: {{t|bs|pusteni šešir|m}}
 * Danish: [[filthat]] {{c}}
 * Finnish: {{t+|fi|huopahattu}}
 {{trans-mid}}
