--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -134,7 +134,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Italian: {{t+|it|branca|f}}
 {{trans-mid}}
 * Polish: {{t+|pl|gałąź|f}}, {{t+|pl|dział|m}}
-* Romanian: {{t+|ro|ram|n}}, {{t+|ro|ramură|f}}
+* Romanian: {{t+|ro|ram|n}}, {{t+|ro|ramură|f}}, {{t|ro|branșă|f}}
 * [[Scots]]: {{tø|sco|brainch|xs=Scots}}
 * [[Scottish Gaelic]]: {{t-|gd|meur|f|xs=Scottish Gaelic}}
 * [[Tagalog]]: {{t|tl|sangay|xs=Tagalog}}
