--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -202,6 +202,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 {{trans-mid}}
 * German: {{t+|de|springen}}
 * Polish: {{t|pl|rozgałęziać się}}
+* Romanian: {{t|ro|ramifica}}
 {{trans-bottom}}
 
 {{trans-top|to branch off}}
