--- a/en/坨/坨.13035.wikitext
+++ b/en/坨/坨.13035.wikitext
@@ -4,8 +4,8 @@
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4311<sub>1</sub>|canj=土十心 (GJP)}}
 
 # {{defn|Han|sort=土05}}
-#lump
-#spherical object
+# lump
+# spherical object
 
 ====References====
 * {{Han ref|kx=0226.200|dkj=04974|dj=0461.320|hdz=10435.060|uh=5768|ud=22376|bh=CC40|bd=52288}}
@@ -52,8 +52,11 @@
 ----
 
 ==Vietnamese==
+
 ===Han character===
 坨 ([[đà]])
+
+# {{defn|Vietnamese}}
 
 [[fr:坨]]
 [[ko:坨]]
