--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -7,6 +7,9 @@
 # [[let down]]
 # [[suspend]], [[hand down]]
 
+====See also====
+* [[乗]] <!-- graphically similar, similar etymology -->
+
 ====References====
 * {{Han ref|kx=0227.160|dkj=05012|dj=0463.020|hdz=10432.050|uh=5782|ud=22402|bh=ABAB|bd=43947}}
 
