--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -300,6 +300,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Esperanto: {{t-|eo|tranĉi|xs=Esperanto}}
 * Finnish: {{t+|fi|leikata}}
 * French: {{t+|fr|couper}},  {{t+|fr|inciser}}
+*: [[Old French]]: {{tø|fro|trenchier}}, {{tø|fro|colper}}
 * [[Galician]]: {{t+|gl|cortar|xs=Galician}}
 * German: {{t+|de|einschneiden}}
 {{trans-mid}}
@@ -333,6 +334,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Esperanto: {{t-|eo|tranĉi|xs=Esperanto}}
 * Finnish: {{t+|fi|leikata}}
 * French: {{t+|fr|couper}}
+*: [[Old French]]: {{tø|fro|colper}}, {{tø|fro|couper}}, {{tø|fro|coper}}
 * [[Galician]]: {{t+|gl|cortar|xs=Galician}}
 {{trans-mid}}
 * German: {{t+|de|schneiden}}
