--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -173,6 +173,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 [[hr:Germany]]
 [[io:Germany]]
 [[id:Germany]]
+[[is:Germany]]
 [[it:Germany]]
 [[kl:Germany]]
 [[kk:Germany]]
