--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -99,7 +99,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 {{trans-mid}}
 * Norwegian: {{t+|no|narkotika}}
 * Polish: {{t+|pl|narkotyk|m}}
-* Romanian: {{t|ro|drog|n}}, {{t|ro|droguri|n|p}}
+* Romanian: {{t|ro|drog|n}}, {{t|ro|droguri|n|p}}, {{t|ro|narcotic|n}}
 * Russian: {{t+|ru|вещество|n|tr=veščestvó}}
 * Swedish: {{t+|sv|substans|c}}
 {{trans-bottom}}
