--- a/en/態/態.15710.wikitext
+++ b/en/態/態.15710.wikitext
@@ -1,10 +1,17 @@
 {{also|态}}
 ==Translingual==
+{{zh-forms|[[态]]|態}}
+
+===Etymology===
+{{Han compound|能|心|t2=heart|ls=psc|c1=p|c2=s}} – one’s heart-felt attitude.
 
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=2133<sub>1</sub>|canj=戈心心 (IPP)}}
 
 # [[manner]], [[bearing]], [[attitude]]
+
+====Descendants====
+* [[态]]
 
 ====References====
 * {{Han ref|kx=0398.030|dkj=11052|dj=0737.040|hdz=42335.070|uh=614B|ud=24907|bh=BA41|bd=47681}}
