--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -1,4 +1,4 @@
-{{also|陽}}
+{{also|陽|易}}
 ==Translingual==
 
 ===Etymology===
@@ -13,6 +13,9 @@
 ====Descendants====
 * [[陽]], [[踼]], [[湯]], [[揚]], [[場]], [[腸]], [[𥯕]], [[暘]], [[煬]], [[禓]], [[𥏫]], [[楊]], [[玚]], [[𦳝]], [[瘍]], [[崵]], [[碭]], [[䵮]], [[颺]], [[愓]], [[畼]], [[餳]], [[暢]], [[鍚]]
 * [[傷]], [[觴]], [[殤]] {{qualifier|via variant}}
+
+====See also====
+* [[易]]
 
 ====References====
 * {{Han ref|kx=0492.170|dkj=13832|dj=0855.170|hdz=21499.070|uh=661C|ud=26140|bh=CEEF|bd=52975}}
