--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -6,6 +6,9 @@
 # ten-day period
 # period of time
 
+====See also====
+* [[复]] [[傷]] <!-- Graphically similar -->
+
 ====References====
 * {{Han ref|kx=0489.160|dkj=13746|dj=0850.130|hdz=21485.030|uh=65EC|ud=26092|bh=A6AF|bd=42671}}
 
