--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -1,5 +1,7 @@
 {{also|句}}
 ==Translingual==
+===Etymology===
+{{Han compound|勹|日|ls=ic}} – a bag/period of days 日.
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=02|sn=6|four=2762<sub>0</sub>|canj=心日 (PA)}}
