--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -37,15 +37,17 @@
 * French: {{t+|fr|européen|m}}, {{t+|fr|européenne|f}}
 * German: {{t+|de|europäisch}}
 * Greek: {{t+|el|ευρωπαϊκός|tr=evropa'ikós}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|európai}}
+{{trans-mid}}
 * [[Interlingua]]: [[europee]]
+* Irish: {{t|ga|Eorpach}}, {{t|ga|Eorpa|alt=na hEorpa}}
 * Italian: {{t+|it|europeo|m}}, {{t+|it|europea|f}}
 * Japanese: [[ヨーロッパ]]の (Yōroppa no), [[欧州]]の (Ōshū no)
 * Maltese: [[ewropew]] {{m}}, [[ewropea]] {{f}}
 * Polish: {{t+|pl|europejski|m}}, {{t-|pl|europejska|f}}
 * Portuguese: {{t+|pt|europeu|m}}, {{t+|pt|europeia|f}}
 * Romanian: {{t|ro|european}}
+* [[Romansch]]: {{t|rm|europeic|m}}, {{t|rm|europeica|f}}
 * Russian: {{t+|ru|европейский|tr=jevropéjskij}}
 * Spanish: {{t+|es|europeo}}
 * Swedish: {{t+|sv|europeisk}}
