--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -52,6 +52,8 @@
 * Italian: {{t+|it|porto|m}}
 * Japanese: [[港]]　([[みなと]], ''minato'')
 * Korean: [[항구]] ([[港口]], hanggu)
+* Latvian: {{t|lv|osta|f}}
+* Lithuanian: {{t|lt|uostas|m}}
 * [[Malayalam]]: [[തുറമുഖം]] (thuRamukham)
 * Persian: {{t+|fa|بندر|tr=bandar|xs=Persian}}
 * Polish: {{t+|pl|port|m}}
@@ -77,6 +79,8 @@
 * Hungarian: {{t+|hu|kikötőváros}}
 * [[Ido]]: [[portuo]]
 * Italian: [[città portuale]] {{f}}
+* Latvian: {{t|lv|ostas pilsēta |f}}
+* Lithuanian: {{t|lt|uostamiestis|m}}
 * Polish: [[miasto portowe]] {{n}}
 * Romanian: {{t-|ro|port|n}}
 * Spanish: {{t-|es|puerto|m}}
