--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -145,6 +145,9 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 ===See also===
 * {{list|en|countries of Europe}}
 
+===References===
+<references/>
+
 [[Category:France|*]]
 
 ----
