--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -60,6 +60,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 ====Translations====
 {{trans-top|gentle bend}}
 * [[Afrikaans]]: [[kurwe]]
+* [[Basque]]: {{t|eu|kurba}}
 * Bulgarian: {{t|bg|извивка|f}}
 * [[Catalan]]: revolt, {{m}}
 * Chinese:
@@ -77,6 +78,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Latvian: {{t|lv| līkums|m}}
 * Lithuanian: {{t|lt|linkis|m}}, {{t|lt|vingis|m}}
 * Polish: {{t|pl|zakręt|m}}
+* Portuguese: {{t|pt|curva}}
 * Romanian: {{t|ro|curbă|f}}, {{t|ro|curbe|f|p}}
 * Russian: {{t+|ru|изгиб|m|tr=izgíb}}, {{t+|ru|кривая|f|tr=krivája}}, {{t+|ru|поворот|m|tr=povorót}}
 * [[Scottish Gaelic]]: {{t-|gd|bogha|xs=Scottish Gaelic}},  {{t-|gd|lùb|f|xs=Scottish Gaelic}}
