--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -150,6 +150,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * [[mangery#English|mangery]]
 * [[menagry#English|menagry]]
 
+[[Category:Germany|*]]
 [[Category:English proper nouns]]
 [[Category:Exonyms]]
 
