--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -4,7 +4,7 @@
 
 ===Etymology===
 {{attention|la}}
-{{term|tortue}}, from {{etyl|VL.}} {{term|tartaruca}}, from {{etyl|LL.}} {{term|tartaruchus||of Tartarus}}, from Greek{{attention|grc}} {{term|sc=Grek|Ταρταροῦχος|tr=tartarouchos||from Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from the underworld.
+{{term|tortue}}, from {{etyl|VL.}} {{term|tartaruca}}, from {{etyl|LL.}} {{term|tartaruchus||of Tartarus}}, from Greek {{term|sc=Grek|ταρταροῦχος|tr=tartarouchos||from Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from the underworld.
 
 ===Pronunciation===
 * {{audio|en-us-tortoise.ogg|Audio (US)}}
