--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -93,6 +93,7 @@ Borrowed from {{etyl|la|fr}} {{term|mandatum}}, from {{term|mandare||to put in o
 [[fr:mandat]]
 [[io:mandat]]
 [[id:mandat]]
+[[ku:mandat]]
 [[hu:mandat]]
 [[mg:mandat]]
 [[pl:mandat]]
