--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -440,6 +440,7 @@
 * [[learn to play]]
 * [[long play]]
 * [[nativity play]]
+* [[mystery play]]
 * [[passion play]]
 * [[playact]]/[[play-act]]
 * [[play about]]
@@ -459,8 +460,8 @@
 * [[play dumb]]
 * [[player]]
 * [[play fair]]
-* [[play fast and loose]]
 {{rel-mid3}}
+* [[play fast and loose]]
 * [[play fight]]/[[play-fight]]/[[playfight]]
 * [[play for love]]
 * [[playful]]
@@ -492,8 +493,8 @@
 * [[play silly buggers]]
 * [[play someone like a fiddle]]
 * [[playsuit]]
-{{rel-mid3}}
 * [[play the field]]
+{{rel-mid3}}
 * [[play the fool]]
 * [[play the ponies]]
 * [[play the race card]]
