--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -228,6 +228,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 [[es:branch]]
 [[fa:branch]]
 [[fr:branch]]
+[[gl:branch]]
 [[ko:branch]]
 [[hy:branch]]
 [[hr:branch]]
