--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -86,8 +86,9 @@
 * Icelandic: {{t+|is|fallegur}}, {{t+|is|fagur}}
 * [[Ido]]: {{t+|io|bela|xs=Ido}}
 * Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
-* Irish: {{t-|ga|álainn|xs=Irish}}
 {{trans-mid}}
+* [[Interlingua]]: {{t|ia|belle}}
+* Irish: {{t-|ga|álainn|xs=Irish}}
 * Italian: {{t+|it|bello}}
 * Japanese: {{t+|ja|美しい|tr=うつくしい, utsukushii}},  {{t-|ja|綺麗}},  {{t-|ja|きれい|tr=kirei}},  {{t+|ja|素敵|tr=すてき, suteki}}
 * [[Khmer]]: {{Khmr|[[ស្អាត]]}} (saāt), {{t-|km|ល្អ|tr=l'ɑɑ|sc=Khmr|xs=Khmer}}
