--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -88,6 +88,7 @@
 [[de:Czech Republic]]
 [[el:Czech Republic]]
 [[es:Czech Republic]]
+[[fa:Czech Republic]]
 [[fr:Czech Republic]]
 [[hr:Czech Republic]]
 [[io:Czech Republic]]
