--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -76,7 +76,7 @@
 * Swedish: {{t+|sv|suga}}
 * [[Tajik]]: {{t-|tg|макидан|tr=makidan|sc=Cyrl|xs=Tajik}}
 * [[Telugu]]: [[చీకు]] (cheeku)
-* Thai: {{t|th|ดูด|sc=Thai}}
+* Thai: {{t|th|ดูด|sc=Thai}} (dūd)
 * Ukrainian: {{t-|uk|смоктати|tr=smoktáty|xs=Ukrainian}}, {{t-|uk|ссати|tr=ssáty|xs=Ukrainian}}
 {{trans-bottom}}
 
