--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -77,6 +77,7 @@
 * [[Tajik]]: {{t-|tg|макидан|tr=makidan|sc=Cyrl|xs=Tajik}}
 * [[Telugu]]: [[చీకు]] (cheeku)
 * Thai: {{t|th|ดูด|sc=Thai}} (dūd)
+* Turkish: {{t|tr|emmek}}
 * Ukrainian: {{t-|uk|смоктати|tr=smoktáty|xs=Ukrainian}}, {{t-|uk|ссати|tr=ssáty|xs=Ukrainian}}
 {{trans-bottom}}
 
