--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -80,8 +80,8 @@
 * German: {{t+|de|Europäer|m}}, {{t+|de|Europäerin|f}}
 * Greek: {{t+|el|Ευρωπαίος|m|tr=evropéos}},  {{t|el|Ευρωπαία|f|tr=evropéa}}
 * Hindi: {{t|hi|युरोपियन|tr=yuropiyan|xs=Hindi}}
-{{trans-mid}}
 * Hungarian: [[európai]], [[européer]]
+{{trans-mid}}
 * [[Interlingua]]: [[europeo]]
 * Irish: {{t|ga|Eorpach|m}}
 * Italian: {{t+|it|europeo|m}}, {{t+|it|europea|f}}
@@ -97,6 +97,7 @@
 * Vietnamese: {{t|vi|người Châu Âu|xs=Vietnamese}}
 * Welsh: [[Ewropead]]
 * [[West Frisian]]: [[Europeaan]]
+* Yiddish: {{t|yi|אייראָפּעער|m|tr=eyropeyer|sc=yi-Hebr}}, {{t|yi|אייראָפּעערין|f|tr=eyropeyerin|sc=yi-Hebr}}
 {{trans-bottom}}
 
 [[et:European]]
