--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -55,7 +55,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|Germanic|fehtanan|lang=en}}. Cog
 * Czech: {{t-|cs|bojovat}}, {{t-|cs|zápasit}}
 * Danish: {{t-|da|slås}}, {{t-|da|kæmpe}}
 * Dutch: {{t+|nl|strijden}}, {{t+|nl|vechten}}
-* {{trreq|Esperanto}}
+* Esperanto: {{t|eo|batali}}
 * Estonian: (''without weapons'') {{t|et|kaklema}}, (''with weapons'') {{t|et|võitlema}}
 * Finnish: (''without weapons'') {{t-|fi|tapella}}, (''with weapons'') {{t+|fi|taistella}}
 * French: {{t-|fr|se battre}}
