--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -65,6 +65,7 @@
 * Polish: {{t+|pl|oliwka}}
 * Portuguese: {{t+|pt|azeitona|f}}
 * Romanian: {{t+|ro|măslină|f}}, {{t+|ro|olivă|f}}
+* [[Romansch]]: {{t|rm|uliva|f}}, {{t|rm|oliva|f}}, {{t|rm|uleiva|f}}
 * Russian: {{t+|ru|оливка|f|tr=olívka}}, {{t+|ru|маслина|f|tr=maslína}}
 * Serbian:
 *: Cyrillic: {{t-|sr|маслина|f|sc=Cyrl}}
