--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -164,8 +164,8 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Italian: {{t+|it|prugna|f}}, {{t+|it|susina|f}}
 * Japanese: {{t-|ja|セイヨウスモモ|tr=seiyōsumomo}}, {{t-|ja|プラム|tr=puramu}}
 * Korean: {{t+|ko|자두|tr=jadu|sc=Hang}}, {{t-|ko|서양자두|tr=seoyangjadu|sc=Hang}}
-{{trans-mid}}
 * Latin: {{t-|la|prunum|n|alt=prūnum}}
+{{trans-mid}}
 * Latvian: [[plūme]] {{f}}
 * Lithuanian: {{t+|lt|slyva|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|слива|f|tr=slíva}}
@@ -193,6 +193,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Turkish: {{t+|tr|erik}}
 * Vietnamese: ([[quả]]) [[mận]], ([[trái]]) mận
 * [[West Frisian]]: {{t-|fy|prom|xs=West Frisian}}
+* Yiddish: {{t|yi|פֿלוים|f|tr=floym|sc=yi-Hebr}}
 {{trans-bottom}}
 
 {{trans-top|the tree}}
