--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -217,10 +217,11 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Italian: {{t+|it|prugno|m}}, {{t-|it|susino|m}}
 * Japanese: [[セイヨウスモモ]] (seiyō sumomo)
 * Korean: {{t-|ko|자두나무|tr=jadunamu|sc=Hang}}
-{{trans-mid}}
 * Latin: {{t-|la|prunus|f|alt=prūnus}}
+{{trans-mid}}
 * Latvian: [[plūme]] {{f}}
 * [[Macedonian]]: {{t-|mk|слива|f|tr=slíva}}
+* [[Manx]]: {{t|gv|billey plumbis|m}}
 * [[Old English]]: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
 * [[Papiamentu]]: {{tø|pap|preimu}}
 * Polish: {{t+|pl|śliwa|f}}
