--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -22,6 +22,8 @@
 
 ====Translations====
 {{trans-top|simple past of come}}
+* Italian:
+*: Italian: {{t|it|venuto|m}}
 * [[Scottish Gaelic]]: {{t|gd| thàinig|xs=Scottish Gaelic}}
 {{trans-mid}}
 {{trans-bottom}}
