--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -27,7 +27,7 @@
 * [[Catalan]]: {{t|ca|Estats Units d'Amèrica|m|p}}
 * Chinese:
 *: Cantonese: {{tø|yue|美利堅合眾國|sc=Hani|xs=Cantonese}}
-*: Mandarin: {{t|cmn|美利堅合眾國|sc=Hani}},  {{t-|cmn|美利坚合众国|tr=Měilìjiān Hézhòngguó|sc=Hani}},  {{t-|cmn|美國|sc=Hani}},  {{t-|cmn|美国|tr=Měiguó|sc=Hani}}, {{t-|cmn|美|tr=Měi-|sc=Hani}} (''abbreviation'')
+*: Mandarin: {{t|cmn|美利堅合眾國|sc=Hani}}, {{t-|cmn|美利坚合众国|tr=Měilìjiān Hézhòngguó|sc=Hani}}, {{t-|cmn|美國|sc=Hani}}, {{t-|cmn|美国|tr=Měiguó|sc=Hani}}, {{t-|cmn|美|tr=Měi-|sc=Hani}} (''abbreviation'')
 *: Minnan: {{t+|nan|Bí-kok|xs=Min Nan}}
 * Croatian: {{t+|hr|Sjedinjene Američke Države|f|p}}
 * Czech: {{t-|cs|Spojené státy americké}}, {{t-|cs|Spojené státy}}
@@ -47,7 +47,7 @@
 * Hebrew: {{t|he|ארצות הברית של אמריקה|tr=Artsot ha-Brit shel Amerika}}, ''short:'' {{t|he|ארצות הברית|tr=Artsot ha-Brit}}, ''abbr.:'' {{t-|he|ארה״ב|tr=ARH-B}}
 * {{trreq|Hiligaynon}}
 * Hindi: {{t-|hi|संयुक्त राज्य अमरीका|tr=Sa.nyukta Rājya Amrīkā|xs=Hindi}}, {{t-|hi|संयुक्त राष्ट्र अमरीका|tr=Sa.nyukta Raštra Amrīkā|xs=Hindi}}
-* Hungarian: {{t+|hu|Amerikai Egyesült Államok}},  {{t+|hu|Egyesült Államok}},  {{t+|hu|USA}}
+* Hungarian: {{t+|hu|Amerikai Egyesült Államok}}, {{t+|hu|Egyesült Államok}}, {{t+|hu|USA}}
 * Indonesian: {{t-|id|Amerika Serikat|xs=Indonesian}}
 * [[Interlingua]]: [[Statos Unite de America]]
 * Irish: {{t|ga|Stáit Aontaithe Mheiriceá|xs=Irish}}, {{t-|ga|Meiriceá|xs=Irish}}
@@ -93,8 +93,8 @@
 * [[Tagalog]]: {{t|tl|Estados Unidos ng Amerika|xs=Tagalog}}
 * [[Tajik]]: [[Иёлоти Муттаҳидаи Амриқо]] (Iyoloti Muttaħidai Amriqo)
 * {{trreq|Tamil}}
-* [[telugu]]: [[తెలుగు]] : [[అమెరికా సంయుక్త రాష్ట్రములు]]
-* Thai: {{Thai|[[สหรัฐอเมริกา]]}} (sàhà rát àmayrígaa),  {{t|th|อเมริกา|tr=àmayrígaa}},  {{t|th|ประเทศสหรัฐอเมริกา|tr=bpràtêt sàhà rát àmayrígaa}}
+* Telugu: [[అమెరికా సంయుక్త రాష్ట్రములు]]
+* Thai: {{Thai|[[สหรัฐอเมริกา]]}} (sàhà rát àmayrígaa), {{t|th|อเมริกา|tr=àmayrígaa}}, {{t|th|ประเทศสหรัฐอเมริกา|tr=bpràtêt sàhà rát àmayrígaa}}
 * Turkish: {{t+|tr|Amerika Birleşik Devletleri}}, {{t-|tr|Birleşik Devletler}}, {{t+|tr|ABD}}, {{t+|tr|Amerika}}
 * Ukrainian: {{t|uk|Сполучені Штати Америки|m|p|tr=Spolúčeni Štáty Améryki|xs=Ukrainian}}, {{t+|uk|США|m|p|tr=se-še-á|xs=Ukrainian}}
 * Urdu: {{t|ur|ریاستہائے متحدہ امریکہ|tr=riyaastahaa'e muttaHidah amriikaa|xs=Urdu}}
