--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -137,6 +137,7 @@ From {{etyl|la}} ''[[vomitare]]'', present active infinitive of {{term|vomito|vo
 [[li:vomit]]
 [[hu:vomit]]
 [[ml:vomit]]
+[[my:vomit]]
 [[nl:vomit]]
 [[no:vomit]]
 [[pl:vomit]]
