--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=5060<sub>3</sub>|canj=手大日 (QKA)}}
 
-# [[spring]]
+# The [[spring]] season
 # [[wanton]]
 
 ====References====
