--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -73,6 +73,7 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 * Slovene: [[npr.]] {{i|[[na]] [[primer]]}}
 * Spanish: {{t-|es|por ejemplo}}
 * Swedish: {{t+|sv|t.ex.}}, {{t+|sv|t ex}}, {{t-|sv|tex.}} {{t-|sv|t. ex.}} {{i|{{t+|sv|till exempel}}}}, {{t+|sv|exempelvis}}
+* [[Tagalog]]: {{t|tl|halimbawa}}
 * Turkish: {{t|tr|örneğin}},  {{t+|tr|mesela}}
 * Ukrainian: {{t|uk|наприклад|tr=napryklad|xs=Ukrainian}}
 * Vietnamese: [[vd.]] {{i|[[ví dụ]]}}
