--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -173,6 +173,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 [[lt:cost]]
 [[li:cost]]
 [[hu:cost]]
+[[mg:cost]]
 [[ml:cost]]
 [[my:cost]]
 [[nl:cost]]
