--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -103,6 +103,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Italian: {{t+|it|costare}}
 * Japanese: [[費やす]] ([[ついやす]], tsuiyasu),  {{t-|ja|掛かる|tr=kakaru}}
 * [[Kannada]]: {{t+|kn|ಬೀರು|tr=bīru|sc=Knda|xs=Kannada}}
+* Latvian: {{t|lv|maksāt}}
 * Polish: {{t+|pl|kosztować}}
 * Portuguese: {{t+|pt|custar}}
 * Romanian: {{t+|ro|costa}},  {{t-|ro|preţui}}
