--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -3,7 +3,7 @@
 {{rank|Lord|de|whole|190|find|got|let|world}}
 
 ===Etymology===
-From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang=ang}} (compare Dutch {{term|vinden}}, German {{term|finden}}, Swedish {{term|finna|lang=sv}}), a secondary verb from {{proto|Indo-European|pontHo-}} (compare Old Irish {{term|étain|lang=sga}} 'I find', {{term|áitt|lang=sga}} 'place', Latin {{term|pons|pōns|lang=la}} 'bridge', Ancient Greek ''póntos'' 'sea', Old Armenian {{term|հուն|tr=hun||riverbed|lang=xcl}}, Avestan {{term|panta|pantā|lang=ae}} (gen. ''paþō''), Sanskrit ''pánthās'' 'path').
+From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang=ang}} (compare Dutch {{term|vinden}}, German {{term|finden}}, Swedish {{term|finna|lang=sv}}), a secondary verb from {{proto|Indo-European|pontHo-}} (compare Old Irish {{term|étain|lang=sga}} 'I find', {{term|áitt|lang=sga}} 'place', Latin {{term|pons|pōns|lang=la}} 'bridge', Ancient Greek ''póntos'' 'sea', Old Armenian {{term|հուն|tr=hun||ford|lang=xcl}}, Avestan {{term|panta|pantā|lang=ae}} (gen. ''paþō''), Sanskrit ''pánthās'' 'path').
 
 ===Pronunciation===
 * {{enPR|fīnd}}, {{IPA|/faɪnd/}}, {{SAMPA|/faInd/}}
