--- a/en/圱/圱.12979.wikitext
+++ b/en/圱/圱.12979.wikitext
@@ -16,7 +16,7 @@
 2. ancient character whose meaning is identical to 俗 and 阡
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[chǎng]] ([[chang3]]), [[qiān]] ([[qian1]])|wg=ch'ang<sup>3</sup>, ch'ien<sup>1</sup>}}
+{{cmn-hanzi|pin=[[sú]] ([[su2]]), [[qiān]] ([[qian1]])|wg=ch'ang<sup>3</sup>, ch'ien<sup>1</sup>}}
 
 # {{defn|Mandarin|sort=土03}}
 
