--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -13,7 +13,7 @@
 From {{etyl|ang}} ''[[feohtan]]'', from {{proto|Germanic|fehtanan|lang=en}}. Cognate with Dutch ''[[vechten]]'', German ''[[fechten]]''.
 
 ====Verb====
-{{en-verb|fights|fighting|fought|'''[[fought]]''' ''or'' '''[[foughten]]'''}}
+{{en-verb|fights|fighting|fought|'''[[fought]]''' ''or'' {{qualifier|archaic}} '''[[foughten]]'''}}
 
 # {{intransitive}} To [[contend]] in physical conflict, either singly or in war, battle etc.
 #* ''The two boxers have been '''fighting''' for more than half an hour.''
@@ -44,9 +44,9 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|Germanic|fehtanan|lang=en}}. Cog
 {{trans-top|to contend in physical conflict}}
 * [[Afrikaans]]: {{t|af|stryd}}
 * Albanian: {{t|sq|luftën}}
-* Arabic: {{t+|ar|قاتل|tr=qaatala}},  {{t|ar|تقاتل|tr=taqaatala}}
+* Arabic: {{t+|ar|قاتل|tr=qaatala}}, {{t|ar|تقاتل|tr=taqaatala}}
 * Armenian: {{t-|hy|կռվել|tr=kṙvel}}
-* [[Basque]]: {{t|eu|borrokatu|xs=Basque}},  {{t|eu|borroka egin|xs=Basque}}
+* [[Basque]]: {{t|eu|borrokatu|xs=Basque}}, {{t|eu|borroka egin|xs=Basque}}
 * Bulgarian: [[боря се]]
 * {{trreq|Burmese}}
 * [[Catalan]]: {{t|ca|lluitar}}, {{t|ca|barallar-se}}
@@ -81,7 +81,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|Germanic|fehtanan|lang=en}}. Cog
 * Maltese: {{t|mt|ġlieda}}
 * Norwegian: {{t+|no|slåss}}, {{t-|no|kjempe}}
 * [[Old English]]: {{t-|ang|feohtan|xs=Old English}}
-* Persian: {{t|fa|آوریدن |xs=Persian}},  {{t|fa|آفندیدن|xs=Persian}},  {{t|fa|پیکار|xs=Persian}},  {{t|fa|جنك|xs=Persian}}
+* Persian: {{t|fa|آوریدن |xs=Persian}}, {{t|fa|آفندیدن|xs=Persian}}, {{t|fa|پیکار|xs=Persian}}, {{t|fa|جنك|xs=Persian}}
 * Polish: {{t+|pl|walczyć}}
 * Portuguese: {{t+|pt|lutar}} com/contra
 * Romanian: {{t+|ro|lupta}}, {{t|ro|se bate}}
@@ -102,7 +102,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|Germanic|fehtanan|lang=en}}. Cog
 {{trans-bottom}}
 
 {{trans-top|to strive for}}
-* [[Basque]]: {{t|eu|borrokatu|xs=Basque}},  {{t|eu|borroka egin|xs=Basque}}
+* [[Basque]]: {{t|eu|borrokatu|xs=Basque}}, {{t|eu|borroka egin|xs=Basque}}
 * Czech: {{t-|cs|bojovat}}
 * Dutch: {{t+|nl|opkomen}} {{t+|nl|voor}}, {{t-|nl|ijveren}} voor
 * Finnish: {{t|fi|taistella}}, {{t|fi|tsempata}}
@@ -136,7 +136,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|Germanic|fehtanan|lang=en}}. Cog
 
 {{trans-top|to engage in combat}}
 * Armenian: {{t-|hy|մարտնչել|tr=martnčel}}
-* [[Basque]]: {{t|eu|borrokatu|xs=Basque}},  {{t|eu|borroka egin|xs=Basque}}
+* [[Basque]]: {{t|eu|borrokatu|xs=Basque}}, {{t|eu|borroka egin|xs=Basque}}
 * [[Catalan]]: {{t+|ca|combatre}}
 * Czech: {{t-|cs|bojovat}}
 * Danish: {{t|da|udkæmpe}}
@@ -158,7 +158,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|Germanic|fehtanan|lang=en}}. Cog
 * Lithuanian: {{t|lt|kovoti}}, {{t|lt|kautis}}
 * Norwegian: {{t+|no|slåss}}
 * [[Occitan]]: {{t+|oc|batre|xs=Occitan}}
-* [[Old French]]: {{tø|fro|batre}},  {{tø|fro|cumbatre}}
+* [[Old French]]: {{tø|fro|batre}}, {{tø|fro|cumbatre}}
 * Portuguese: {{t|pt|combater}}, {{t+|pt|lutar}}
 * Romanian: {{t-|ro|combate}}
 * [[Romansch]]: {{t|rm|cumbatter|xs=Romansch}}
@@ -211,7 +211,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 # {{archaic}} A [[battle]] between opposing armies.
 # A [[physical]] [[confrontation]] or [[combat]] between two or more people or groups.
 #* ''Watch your language, are you looking for a '''fight'''?''
-# {{context|Sports}} A [[boxing]] or [[martial arts]] [[match]].
+# {{sports}} A [[boxing]] or [[martial arts]] [[match]].
 #* ''I'm going to Nick’s to watch the big '''fight''' tomorrow night.''
 # A [[conflict]], possibly nonphysical, with opposing ideas or forces; [[strife]].
 #* ''I'll put up a '''fight''' to save this company.''
@@ -248,7 +248,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 {{trans-top|occasion of fighting}}
 * Albanian: {{t-|sq|luftë|f|xs=Albanian}}
 * Armenian: {{t-|hy|կռիվ|tr=kṙiv}}
-* [[Basque]]: {{t|eu|borroka|xs=Basque}},  {{t|eu|borrokaldi|xs=Basque}}
+* [[Basque]]: {{t|eu|borroka|xs=Basque}}, {{t|eu|borrokaldi|xs=Basque}}
 * [[Catalan]]: [[lluita]] {{f}}, [[combat]] {{m}}
 * Chinese: {{zh-tsp|鬥爭|斗争|dòuzhēng}}, {{zh-tsp|戰鬥|战斗|zhàndòu}}
 * Czech: {{t-|cs|boj|m}}
@@ -269,16 +269,16 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * Lithuanian: {{t|lt|kova|f}}, {{t|lt|muštynės|p}}, {{t|lt|grumtynės|p}}
 * Norwegian: {{t|no|slåsskamp}}
 * Portuguese: {{t+|pt|luta|f}}
-* Romanian: {{t-|ro|luptă|f}},  {{t-|ro|bătaie}}
+* Romanian: {{t-|ro|luptă|f}}, {{t-|ro|bătaie}}
 * Russian: {{t+|ru|драка|f|tr=dráka}}, {{t+|ru|бой|m|tr=boj}}
-* [[Scottish Gaelic]]: [[cogadh]] {{m}}, [[sabaid]] {{f}},  {{t-|gd|còmhrag|f|xs=Scottish Gaelic}}
+* [[Scottish Gaelic]]: [[cogadh]] {{m}}, [[sabaid]] {{f}}, {{t-|gd|còmhrag|f|xs=Scottish Gaelic}}
 * Spanish: {{t+|es|lucha|f}}, {{t+|es|lucha|f}}
 * Swahili: {{t+|sw|vita|xs=Swahili}}
 {{trans-bottom}}
 
 {{trans-top|battle}}
 * Armenian: {{t+|hy|մարտ|tr=mart}}
-* [[Basque]]: {{t|eu|gudu|xs=Basque}},  {{t|eu|bataila|xs=Basque}}
+* [[Basque]]: {{t|eu|gudu|xs=Basque}}, {{t|eu|bataila|xs=Basque}}
 * Chinese: {{zh-tsp|鬥爭|斗争|dòuzhēng}}, {{zh-tsp|戰鬥|战斗|zhàndòu}}
 * Danish: {{t-|da|kamp}}, {{t-|da|slag}}
 * Dutch: {{t+|nl|gevecht|n}}, {{t+|nl|strijd|m}}
@@ -321,7 +321,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * Polish: {{t|pl|starcie|n}}
 * Portuguese: {{t+|pt|briga|f}}
 * Russian: {{t+|ru|драка|f|tr=dráka}}, {{t+|ru|бой|m|tr=boj}}
-* [[Scottish Gaelic]]: [[cogadh]] {{m}}, [[sabaid]] {{f}},  {{t-|gd|còmhrag|f|xs=Scottish Gaelic}}
+* [[Scottish Gaelic]]: [[cogadh]] {{m}}, [[sabaid]] {{f}}, {{t-|gd|còmhrag|f|xs=Scottish Gaelic}}
 * Swahili: {{t+|sw|vita|xs=Swahili}}
 {{trans-bottom}}
 
