--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -152,6 +152,7 @@
 * Italian: {{t+|it|eterosessuale}}
 * Japanese: {{t|ja|ノンケの|tr=nonke no}}
 * Portuguese: {{t|pt|hétero|m|f}}
+* Russian: {{t|ru|натурал|m|tr=natural|sc=Cyrl}}
 * Spanish: {{t+|es|heterosexual}}
 {{trans-bottom}}
 
