--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -153,6 +153,7 @@
 * Japanese: {{t|ja|ノンケの|tr=nonke no}}
 * Portuguese: {{t|pt|hétero|m|f}}
 * Russian: {{t|ru|натурал|m|tr=natural|sc=Cyrl}}
+* Russian: {{qualifier|slang}} {{t|ru|натурал|m|tr=natural|sc=Cyrl}}
 * Spanish: {{t+|es|heterosexual}}
 {{trans-bottom}}
 
