--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -2,8 +2,6 @@
 {{also|Côme}}
 ==English==
 
-{{rank|old|came|men|107|come|without|make|def}}
-
 ===Etymology===
 {{etyl|enm}} {{term|comen|lang=enm}}, from {{etyl|ang}} {{term|coman|lang=ang}}, from {{proto|Germanic|kwemanan}} (compare West Frisian {{term|komme|lang=fy}}, Dutch {{term|komen|lang=nl}}, German {{term|kommen|lang=de}}), from {{proto|Indo-European|gʷem-/gʷem-ye-}} (compare Latin {{term|venio|veniō|lang=la}}, Tocharian [[w:Tocharian A|A]] {{term|kumnäs|lang=xto}}, [[w:Tocharian B|B]] {{term|känmask|lang=xtb}}, Lithuanian {{term|gimti|lang=lt}} 'to be born', Ancient Greek {{term|sc=polytonic|βαίνω|tr=bainō|lang=grc}}, ''báskein'' 'to walk, go', Avestan ''ǰamaiti'' 'to go', Sanskrit {{term|sc=Deva|गच्छति|tr=gácchati|lang=sa}}), Hittite ''wemiyezi'' 'he finds'.
 
@@ -204,6 +202,9 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 
 ===References===
 <references/>
+
+===Statistics===
+{{rank|old|came|men|107|come|without|make|def}}
 
 ===Anagrams===
 * [[cmeo#English|cmeo]]
